--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,11 @@
     "dev": "nodemon index"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongodb": "^4.8.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.3",
     "nodemon": "^2.0.19"
   }
 }
